--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
     hello world
     <h1>hi</h1>
-    <h3>Asadi</h3>
-    <h2>MAhan</h2>
+    <h3>Asadi </h3>
+    <h2>MAhan </h2>
+    <h2>Age: 25</h2>
     <button>sub</button>
 </body>
 </html>
