--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
     <h2>Age: 25</h2>
     <h5>height: 185</h5>
     <button>sub</button>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex eius totam et iusto autem doloribus illo officia culpa laboriosam corrupti!</p>
+    <input type="password">
 </body>
 </html>
