add navbar to shop page

--- a/shop.html
+++ b/shop.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
+    <head>
+        <nav>
+            <a href="index.html">first Page</a>
+        </nav>
+    </head>
     <h1>samira</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem excepturi neque obcaecati veniam et nesciunt animi natus nihil accusantium dolor!</p>
 </body>
