--- a/shop.html
+++ b/shop.html
@@ -10,6 +10,7 @@
     <head>
         <nav>
             <a href="index.html">first Page</a>
+            <img src="" alt="">
         </nav>
     </head>
     <h1>samira</h1>
